--- a/app/src/main/res/layout/constraint_layout_activity_main.xml
+++ b/app/src/main/res/layout/constraint_layout_activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="www.battlecall.tk.basedemo.MainActivity">
+    tools:context="www.battlecall.tk.basedemo.ConstraintLayoutActivity">
 
     <TextView
         android:id="@+id/center"
