--- a/app/src/main/res/layout/activity_one_pix.xml
+++ b/app/src/main/res/layout/activity_one_pix.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="www.battlecall.tk.basedemo.keepalive.OnePxActivity">
-
+    android:orientation="vertical"
+    tools:context="www.battlecall.tk.basedemo.keepalive.OnePixActivity">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NNNNN"/>
+        android:text="123456789"/>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
