--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -38,4 +38,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="getCount"/>
+
+
+    <Button
+        android:id="@+id/sayHi"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SayHi..."/>
+
+
 </LinearLayout>
