--- a/app/src/main/res/layout/activity_web_view.xml
+++ b/app/src/main/res/layout/activity_web_view.xml
@@ -38,10 +38,16 @@
         android:layout_height="wrap_content"
         android:text=""/>
 
+    <Button
+        android:layout_below="@id/text_Loading"
+        android:id="@+id/btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BUTTON"/>
     <!--显示网页区域-->
     <WebView
         android:id="@+id/webView1"
-        android:layout_below="@+id/text_endLoading"
+        android:layout_below="@+id/btn"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="10dp" />
