--- a/app/src/main/res/layout/activity_canvas_draw.xml
+++ b/app/src/main/res/layout/activity_canvas_draw.xml
@@ -7,9 +7,9 @@
     android:layout_height="match_parent"
     tools:context="www.battlecall.tk.basedemo.customview.CanvasDrawActivity">
 
-    <www.battlecall.tk.basedemo.customview.CustomView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <www.battlecall.tk.basedemo.customview.CustomView1
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
