--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-
+    <declare-styleable name="CircleView">
+        <attr name="circle_color" format="color"></attr>
+        <attr name="circle_top" format="dimension"></attr>
+    </declare-styleable>
 </resources>
